# ai-chat-platform

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.claude/commands/: browser-test.md  commit-push-pr.md  dev.md  handle-merge-conflict.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/: __init__.py  cli.py  config.py  main.py
backend/src/agent/: __init__.py  client.py  exceptions.py  hooks.py  options.py  sessions.py  subagents.py
backend/src/api/: __init__.py
backend/src/api/routes/: __init__.py  chat.py
backend/src/services/: __init__.py  sessions.py
backend/src/tools/: __init__.py  echo.py  server.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_api_chat.py  test_chat_integration.py  test_cli.py  test_config.py  test_hooks.py  test_sessions.py  test_stream_protocol.py  test_tools.py
docs/: 00-research-findings.md  01-architecture.md  02-original-research-plan.md
frontend/: eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: chat.spec.ts
frontend/src/app/: layout.tsx
frontend/src/components/assistant-ui/: markdown-text.tsx
frontend/src/components/chat/: AskUserQuestionUI.tsx  ChatContext.tsx  ChatInput.tsx  ChatInterface.tsx  ChatProvider.tsx  MarkdownContent.tsx  MessageList.tsx  ToolCallDisplay.tsx  ToolUI.tsx  UserPromptModal.tsx
frontend/src/components/chat/__tests__/: AskUserQuestionUI.test.tsx  ChatInput.test.tsx  ChatProvider.test.tsx  MarkdownContent.test.tsx  (+2 more)
frontend/src/lib/: types.ts
frontend/src/test/: setup.ts
